tests/resource/valid/error/exception_check.py
a = Exception()
b = Exception("b")
